shopmicroprofile-jwt-docker/k8awsjwt/jpapayara-service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: jpapayara
  labels:
    app: jpapayara
spec:
  type: NodePort
  selector:
    app: jpapayara
  ports:
  - protocol: TCP
    port: 8080
    name: http
