shopmicroprofile-jwt-docker/k8awsjwt/stocknew-service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: stocknew
  labels:
    app: stocknew
spec:
  type: NodePort
  selector:
    app: stocknew
  ports:
  - protocol: TCP
    port: 8080
    name: http
